# service-image-detector

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
examples/: test_detection.py
lib/: consts.py  exceptions.py  main.py  schemas.py
lib/clients/: __init__.py  image_downloader.py  image_generator.py  model.py
lib/flow/: __init__.py  flow.py
static/: index.html
tests/: conftest.py  test_api.py  test_consts.py  test_flow.py  test_image_downloader.py  test_image_generator.py  test_model.py  test_schemas.py
